[package]
name = "mos6502_emulator"
version = "0.1.0"
edition = "2021"
authors = ["Claude Code Assistant"]
description = "A complete MOS 6502 CPU emulator written in Rust"
keywords = ["6502", "emulator", "cpu", "retro", "computing"]
categories = ["emulators", "hardware-support"]

[lib]
name = "mos6502_emulator"
path = "src/lib.rs"

[[bin]]
name = "mos6502_emulator"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
prometheus = "0.13"
lazy_static = "1.4"
bcrypt = "0.15"
jsonwebtoken = "9.2"
base64 = "0.21"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
